tests/fixtures/pass/nested_loop_break.sali
let main(): i32 = {
  let mut answer = 40
  loop {
    loop {
      break
    }
    answer = answer + 2
    break answer
  }
}
